manifest/datastore/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datastore
spec:
  selector:
    app: datastore
  ports:
  - port: 8080
    targetPort: 8080
